<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <AutoCompleteTextView
        android:id="@+id/inputCity"
        android:layout_width="282dp"
        android:layout_height="58dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-medium"
        android:hint="@string/city"
        android:text=""
        android:textAlignment="viewStart"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="129dp"
        android:layout_height="54dp"
        android:layout_marginTop="28dp"
        android:alpha='0.4'
        android:clickable="false"
        android:text="@string/add"
        app:layout_constraintStart_toStartOf="@+id/inputCity"
        app:layout_constraintTop_toBottomOf="@+id/inputCity" />

    <Button
        android:id="@+id/buttonRemove"
        android:layout_width="129dp"
        android:layout_height="54dp"
        android:layout_marginStart="216dp"
        android:layout_marginTop="28dp"
        android:alpha='0.4'
        android:clickable="false"
        android:text="@string/remove"
        app:layout_constraintEnd_toEndOf="@+id/inputCity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputCity" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/back"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="371dp"
        android:layout_height="63dp"
        android:layout_marginTop="136dp"
        android:text="Add/Remove Cities"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>