...
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="21dp" />

        <Button
            android:id="@+id/buttonAddLocation"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="20sp"
            android:layout_gravity="center"
            android:text="Add or Remove a location" />

...
            android:layout_height="100dp"
            android:layout_margin="10sp"
            android:layout_gravity="center"
            android:columnCount="2"
            android:rowCount="1">
        <Button
            android:id="@+id/LogOutButton"
            android:layout_width="175dp"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:fontFamily="sans-serif-medium"
            android:text="Logout"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
...
